# TransDETR

./: pyproject.toml  setup.py
